fixed some overlapping content issues

--- a/style.css
+++ b/style.css
@@ -109,16 +109,14 @@ main {
 }
 
 section {
-  display: block;
-  position: relative;
-  height: 100vh;
+  display: inline-flex;
+  flex-direction: column;
 }
 
 section img {
   width: 100vw;
   height: 70vh;
   object-fit: cover;
-  /* filter : drop-shadow(-.3rem .3rem .25rem var(--climb-yellow)); */
   opacity: 70%;
 }
 
@@ -126,12 +124,9 @@ section img {
   background-color: var(--light-grey);
   border-top: solid .75rem var(--climb-yellow);
   border-left:solid .75rem var(--climb-yellow);
-  height: 30vh;
 }
 
 .pillar-info h2 {
-  /* position: absolute;
-  transform: translate(1rem, -4rem); */
   padding-top: 1rem;
   font-size: 3.25rem;
 }
@@ -146,7 +141,6 @@ section img {
 /* CONTACT to be implimented later */
 
 .contact {
-  
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -156,6 +150,7 @@ section img {
 }
 
 .contact h2 {
+  width: 90vw;
   text-align: center;
   font-size: 3rem;
   border-top: double 1rem var(--climb-yellow);
@@ -164,10 +159,11 @@ section img {
 
 .contact p,
 .contactinfo {
-  padding-top: 1rem;
+  padding: 1rem 1rem 0;
   font-size: 1.5rem;
   line-height: 2rem;
   text-align: center;
+  width: 90vw;
 }
 
 .contactinfo {
